Complete arg with dir|archive only

--- a/dist.ini
+++ b/dist.ini
@@ -9,5 +9,7 @@ name=App-ShellCompleter-CpanUpload
 
 [Prereqs]
 perl=5.010001
+Complete::Util=0
+Filename::Archive=0
 Getopt::Long::Complete=0
 ;Log::Any=0
