[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,14 @@ name=App-ShellCompleter-CpanUpload
 
 [Prereqs]
 perl=5.010001
+
+; core modules
+
+strict=0
+warnings=0
+
+; non-core modules
+
 Complete::File=0
 Filename::Archive=0
 Getopt::Long::Complete=0
